# aathalg

./: CMakeLists.txt  README.md
include/aathalg/: graph.h  graph.hpp
include/algae/: graph.hpp  list.hpp  numerics.hpp
src/: graph.cpp
tests/: graph_tests.hpp  list_tests.hpp  main.cpp  numerics_tests.hpp  testing.hpp
